<resources>
    <string name="app_name">Simple Contacts</string>
    <string name="app_launcher_name">Contacts</string>
    <string name="address">Address</string>
    <string name="inserting">Inserting…</string>
    <string name="updating">Updating…</string>
    <string name="phone_storage">Phone storage</string>
    <string name="phone_storage_hidden">Phone storage (not visible by other apps)</string>
    <string name="company">Company</string>
    <string name="job_position">Job position</string>
    <string name="website">Website</string>
    <string name="send_sms_to_contacts">Send SMS to contacts</string>
    <string name="send_email_to_contacts">Send email to contacts</string>
    <string name="send_sms_to_group">Send SMS to group</string>
    <string name="send_email_to_group">Send email to group</string>
    <string name="call_person">Call %s</string>
    <string name="request_the_required_permissions">Request the required permissions</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="add_to_existing_contact">Add to an existing contact</string>
    <string name="must_make_default_dialer">You have to make this app the default dialer app to make use of blocked numbers.</string>
    <string name="set_as_default">Set as default</string>
    <string name="no_contacts_found">No contacts found.</string>
    <string name="no_contacts_with_emails">No contacts with emails have been found</string>
    <string name="no_contacts_with_phone_numbers">No contacts with phone numbers have been found</string>
    <string name="new_contact">New contact</string>
    <string name="edit_contact">Edit contact</string>
    <string name="select_contact">Select contact</string>
    <string name="select_contacts">Select contacts</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="surname">Surname</string>
    <string name="nickname">Nickname</string>
    <string name="no_groups">No groups</string>
    <string name="create_new_group">Create a new group</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="no_group_participants">This group is empty</string>
    <string name="add_contacts">Add contacts</string>
    <string name="no_group_created">There are no contact groups on the device</string>
    <string name="create_group">Create group</string>
    <string name="add_to_group">Add to group</string>
    <string name="create_group_under_account">Create group under account</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="start_name_with_surname">Start name with surname</string>
    <string name="show_phone_numbers">Show phone numbers on the main screen</string>
    <string name="show_contact_thumbnails">Show contact thumbnails</string>
    <string name="show_dialpad_button">Show a dialpad button on the main screen</string>
    <string name="on_contact_click">On contact click</string>
    <string name="call_contact">Call contact</string>
    <string name="view_contact">View contact details</string>
    <string name="manage_shown_contact_fields">Manage shown contact fields</string>
    <string name="filter_duplicates">Try filtering out duplicate contacts</string>
    <string name="manage_shown_tabs">Manage shown tabs</string>
    <string name="contacts">Contacts</string>
    <string name="favorites">Favorites</string>
    <string name="show_call_confirmation_dialog">Show a call confirmation dialog before initiating a call</string>
    <string name="show_only_contacts_with_numbers">Show only contacts with phone numbers</string>
    <string name="show_dialpad_letters">Show letters on the dialpad</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="number">Number</string>
    <string name="mobile">Mobile</string>
    <string name="main_number">Main</string>
    <string name="work_fax">Work Fax</string>
    <string name="home_fax">Home Fax</string>
    <string name="pager">Pager</string>
    <string name="no_phone_number_found">No phone number has been found</string>
    <string name="birthday">Birthday</string>
    <string name="anniversary">Anniversary</string>
    <string name="no_favorites">Seems like you haven\'t added any favorite contacts yet.</string>
    <string name="add_favorites">Add favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="must_be_at_edit">You must be at the Edit screen to modify a contact</string>
    <string name="search_contacts">Search contacts</string>
    <string name="search_favorites">Search favorites</string>
    <string name="search_groups">Search groups</string>
    <string name="import_contacts">Import contacts</string>
    <string name="export_contacts">Export contacts</string>
    <string name="import_contacts_from_vcf">Import contacts from a .vcf file</string>
    <string name="export_contacts_to_vcf">Export contacts to a .vcf file</string>
    <string name="target_contact_source">Target contact source</string>
    <string name="include_contact_sources">Include contact sources</string>
    <string name="filename_without_vcf">Filename (without .vcf)</string>
    <string name="dialpad">Dialpad</string>
    <string name="add_number_to_contact">Add number to contact</string>
    <string name="dialer">Dialer</string>
    <string name="calling">Calling</string>
    <string name="incoming_call">Incoming call</string>
    <string name="incoming_call_from">Incoming call from…</string>
    <string name="ongoing_call">Ongoing call</string>
    <string name="disconnected">Disconnected</string>
    <string name="decline_call">Decline</string>
    <string name="answer_call">Answer</string>
    <string name="speed_dial">Speed dial</string>
    <string name="manage_speed_dial">Manage speed dial</string>
    <string name="speed_dial_label">Click on a number to assign a contact to it. You can then quickly call the given contact by long pressing the given number at the dialer.</string>
    <string name="select_fields_to_show">Select fields to show</string>
    <string name="prefix">Prefix</string>
    <string name="suffix">Suffix</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="emails">Emails</string>
    <string name="addresses">Addresses</string>
    <string name="events">Events (birthdays, anniversaries)</string>
    <string name="notes">Notes</string>
    <string name="organization">Organization</string>
    <string name="websites">Websites</string>
    <string name="groups">Groups</string>
    <string name="contact_source">Contact source</string>
    <string name="instant_messaging">Instant messaging (IM)</string>
    <string name="manage_blocked_numbers">Manage blocked numbers</string>
    <string name="not_blocking_anyone">You are not blocking anyone.</string>
    <string name="add_a_blocked_number">Add a blocked number</string>
    <string name="block_number">Block number</string>
    <string name="block_numbers">Block numbers</string>
    <string name="blocked_numbers">Blocked numbers</string>
    <string name="delete_contacts_confirmation">Are you sure you want to delete %s?</string>
    <string name="delete_from_all_sources">The contact will be removed from all contact sources.</string>
    <plurals name="delete_contacts">
        <item quantity="one">%d contact</item>
        <item quantity="other">%d contacts</item>
    </plurals>
    <plurals name="delete_groups">
        <item quantity="one">%d group</item>
        <item quantity="other">%d groups</item>
    </plurals>
    <string name="faq_1_title">I want to change what fields are visible at contacts. Can I do it?</string>
    <string name="faq_1_text">Yes, all you have to do is go in Settings -> Manage shown contact fields. There you can select what fields should be visible. Some of them are even disabled by default, so you might find some new ones there.</string>
    <string name="app_title">Simple Contacts Pro - Manage your contacts easily</string>
    <string name="app_short_description">Easy and quick contact management with no ads, handles groups and favorites too.</string>
    <string name="app_long_description">
        A lightweight app for managing your contacts loved by millions of people. The contacts can be stored on your device only, but also synchronized via Google, or other accounts.

        You can use it for managing user emails and events too. It has the ability to sort/filter by multiple parameters, optionally display surname as the first name.

        You can display your favorite contacts or groups on a separate list. Groups can be used for sending out batch emails or SMS, to save you some time, you can rename them easily.

        It contains handy buttons for calling, or texting your contacts. All visible fields can be customized as you wish, you can easily hide the unused ones. The search function will search the given string at every visible contact field, to make you find your desired contact easily.

        There is a lightweight dialpad at your service too, with smart contact suggestions.

        It supports exporting/importing contacts in vCard format to .vcf files, for easy migrations or backing up your data.

        With this modern and stable contacts manager you can protect your contacts by not sharing them with other apps, so you can keep your contacts private.

        Like the contact source, you can also easily change the contact name, email, phone number, address, organization, groups and many other customizable fields. You can use it for storing contact events too, like birthdays, anniversaries, or any other custom ones.

        This simple contact editor has many handy settings like showing phone numbers on the main screen, toggle contact thumbnail visibility, showing only contacts with phone numbers, showing a call confirmation dialog before initiating a call. It comes with a quick dialer that also makes use of letters.

        To further improve the user experience, you can customize what happens at clicking on a contact. You can either initiate a call, go to the View Details screen, or edit the selected contact.

        You can easily block phone numbers to avoid unwanted incoming calls.

        To avoid showing potentially unwanted contacts, it has a powerful built in duplicate contact merger.

        It comes with material design and dark theme by default, provides great user experience for easy usage. The lack of internet access gives you more privacy, security and stability than other apps.

        Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors.

        <b>Check out the full suite of Simple Tools here:</b>
        https://www.simplemobiletools.com

        <b>Standalone website of Simple Contacts Pro:</b>
        https://www.simplemobiletools.com/contacts

        <b>Facebook:</b>
        https://www.facebook.com/simplemobiletools

        <b>Reddit:</b>
        https://www.reddit.com/r/SimpleMobileTools
    </string>
</resources>