<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manage_visible_tabs_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/manage_visible_tabs_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/activity_margin"
        android:paddingEnd="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin">

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_tabs_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/contacts"/>

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_tabs_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/favorites"/>

        <com.simplemobiletools.commons.views.MyAppCompatCheckbox
            android:id="@+id/manage_visible_tabs_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_margin"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/groups"/>

    </LinearLayout>
</ScrollView>
