<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_scrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/contact_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin">

        <ImageView
            android:id="@+id/contact_photo"
            android:layout_width="@dimen/contact_photo_size"
            android:layout_height="@dimen/contact_photo_size"/>

        <LinearLayout
            android:id="@+id/contact_actions_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/contact_photo"
            android:layout_alignTop="@+id/contact_photo"
            android:gravity="center_vertical|right">

            <ImageView
                android:id="@+id/contact_send_email"
                style="@style/MyBorderlessBackgroundStyle"
                android:layout_width="@dimen/contact_actions_size"
                android:layout_height="@dimen/contact_actions_size"
                android:layout_marginRight="@dimen/activity_margin"
                android:adjustViewBounds="true"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:scaleType="center"
                android:src="@drawable/ic_email"/>

            <ImageView
                android:id="@+id/contact_start_call"
                style="@style/MyBorderlessBackgroundStyle"
                android:layout_width="@dimen/contact_actions_size"
                android:layout_height="@dimen/contact_actions_size"
                android:layout_marginRight="@dimen/activity_margin"
                android:adjustViewBounds="true"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:scaleType="center"
                android:src="@drawable/ic_phone"/>

            <ImageView
                android:id="@+id/contact_send_sms"
                style="@style/MyBorderlessBackgroundStyle"
                android:layout_width="@dimen/contact_actions_size"
                android:layout_height="@dimen/contact_actions_size"
                android:adjustViewBounds="true"
                android:paddingLeft="@dimen/activity_margin"
                android:paddingRight="@dimen/activity_margin"
                android:scaleType="center"
                android:src="@drawable/ic_sms"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/contact_name_image"
            android:layout_width="@dimen/contact_icons_size"
            android:layout_height="@dimen/contact_icons_size"
            android:layout_alignTop="@+id/contact_first_name"
            android:paddingBottom="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:paddingTop="@dimen/medium_margin"
            android:src="@drawable/ic_person"/>

        <com.simplemobiletools.commons.views.MyEditText
            android:id="@+id/contact_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_photo"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_toRightOf="@+id/contact_name_image"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/bigger_text_size"/>

        <com.simplemobiletools.commons.views.MyEditText
            android:id="@+id/contact_middle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_first_name"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_toRightOf="@+id/contact_name_image"
            android:hint="@string/middle_name"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/bigger_text_size"/>

        <com.simplemobiletools.commons.views.MyEditText
            android:id="@+id/contact_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_middle_name"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_toRightOf="@+id/contact_name_image"
            android:hint="@string/surname"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/bigger_text_size"/>

        <ImageView
            android:id="@+id/contact_number_image"
            android:layout_width="@dimen/contact_icons_size"
            android:layout_height="@dimen/contact_icons_size"
            android:layout_alignTop="@+id/contact_numbers_holder"
            android:paddingBottom="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:paddingTop="@dimen/medium_margin"
            android:src="@drawable/ic_phone"/>

        <LinearLayout
            android:id="@+id/contact_numbers_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_surname"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_toRightOf="@+id/contact_number_image"
            android:orientation="vertical">

            <include layout="@layout/item_phone_number"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/contact_number_add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_numbers_holder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/button_background"
            android:paddingBottom="@dimen/medium_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingTop="@dimen/medium_margin"
            android:src="@drawable/ic_plus"/>

        <ImageView
            android:id="@+id/contact_email_image"
            android:layout_width="@dimen/contact_icons_size"
            android:layout_height="@dimen/contact_icons_size"
            android:layout_alignTop="@+id/contact_emails_holder"
            android:paddingBottom="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:paddingTop="@dimen/medium_margin"
            android:src="@drawable/ic_email"/>

        <LinearLayout
            android:id="@+id/contact_emails_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_number_add_new"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_toRightOf="@+id/contact_name_image"
            android:orientation="vertical">

            <include layout="@layout/item_email"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/contact_email_add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_emails_holder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/small_margin"
            android:background="@drawable/button_background"
            android:paddingBottom="@dimen/medium_margin"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingTop="@dimen/medium_margin"
            android:src="@drawable/ic_plus"/>

        <ImageView
            android:id="@+id/contact_source_image"
            android:layout_width="@dimen/contact_icons_size"
            android:layout_height="@dimen/contact_icons_size"
            android:layout_alignTop="@+id/contact_source"
            android:paddingBottom="@dimen/small_margin"
            android:paddingEnd="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"
            android:paddingTop="@dimen/medium_margin"
            android:src="@drawable/ic_account_box"/>

        <com.simplemobiletools.commons.views.MyTextView
            android:id="@+id/contact_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_email_add_new"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_toRightOf="@+id/contact_name_image"
            android:background="?attr/selectableItemBackground"
            android:lines="1"
            android:maxLines="1"
            android:paddingBottom="@dimen/normal_margin"
            android:paddingLeft="@dimen/small_margin"
            android:paddingTop="@dimen/normal_margin"
            android:singleLine="true"
            android:textSize="@dimen/bigger_text_size"
            tools:text="hello@simplemobiletools.com"/>

    </RelativeLayout>
</ScrollView>
